src/objects/IP_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Initial_Status_Count__c</fullName>
        <description>Enforces only one status marked as Initial Status is linked to a zone.</description>
        <label>Initial Status Count</label>
        <summaryFilterItems>
            <field>IP_Status__c.Initial_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IP_Status__c.Zone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Point_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field determines what the threshold is for an idea before it begins the consideration process 
http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Point Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_per_Vote__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will determine how many points a vote is worth in this zone
http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Points per Vote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Status_Count__c</fullName>
        <description>Enforces only one status marked as Threshold Status is linked to a zone.</description>
        <label>Threshold Status Count</label>
        <summaryFilterItems>
            <field>IP_Status__c.Threshold_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IP_Status__c.Zone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Zone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Single_Initial_Status</fullName>
        <active>true</active>
        <description>Enforces a zone only has one status marked as Initial Status.</description>
        <errorConditionFormula>Initial_Status_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>A zone can only have one status marked as initial status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Single_Threshold_Status</fullName>
        <active>true</active>
        <description>Enforces a zone only has one status marked as Threshold Status.</description>
        <errorConditionFormula>Threshold_Status_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>A zone can only have one status marked as threshold status.</errorMessage>
    </validationRules>
</CustomObject>